--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <title>Neomorph Calculator</title>
    </head>
    <body>
-      <div class="container">
+      <div class="container light">
          <button class="toggleTheme"></button>
          <div class="calculator">
             <div class="calculator__screen">
